set(BOOST_COMPONENTS)
list(APPEND BOOST_COMPONENTS system program_options thread context coroutine)
find_package(Boost REQUIRED CONFIG COMPONENTS ${BOOST_COMPONENTS})
include_directories(sfe/include ${Boost_INCLUDE_DIRS})
add_library(sfe STATIC sfe/src/sfe/sfe_preload.cpp)
target_link_libraries(sfe ${CMAKE_DL_LIBS})
